# mobile_robot_project

./: LICENSE  README.md  note.txt
autonomous_navigation_challenge_2024/: package.xml  setup.cfg  setup.py
autonomous_navigation_challenge_2024/autonomous_navigation_challenge_2024/: change_parameters.py  distance_estimator.py  image_publisher.py  mock_kidnap.py  mock_signpost_publisher.py  navigation.py  navigation_parameters.py  navigation_parameters.yaml  perception.py  poly_creator.py  poly_creator_parameters.py  poly_creator_parameters.yaml  pub_video.py  signpost.py  test_detector.py  topological_map.py  view_camera.py
autonomous_navigation_challenge_2024/autonomous_navigation_challenge_2024/config/: camera_parameter.json  camera_parameter.py  map_creation.rviz  my_navigate_to_pose_w_replanning_and_recovery.xml  nav2.yaml  navigation.rviz
autonomous_navigation_challenge_2024/autonomous_navigation_challenge_2024/pipelines/: pipeline.py
autonomous_navigation_challenge_2024/autonomous_navigation_challenge_2024/pipelines/baseline/: baseline_pipeline.py
autonomous_navigation_challenge_2024/autonomous_navigation_challenge_2024/pipelines/cv2_sliding_window/: cv2_sw_pipeline.py
autonomous_navigation_challenge_2024/autonomous_navigation_challenge_2024/pipelines/frcnn/: frcnn_pipeline.py
autonomous_navigation_challenge_2024/autonomous_navigation_challenge_2024/pipelines/pyzbar/: pyzbar_pipeline.py
autonomous_navigation_challenge_2024/autonomous_navigation_challenge_2024/pipelines/qreader/: qreader_pipeline.py
autonomous_navigation_challenge_2024/autonomous_navigation_challenge_2024/scripts/: camera_off.sh  camera_on.sh  jailbreak_off.sh  jailbreak_on.sh  rqt.sh  setup.sh  setup_camera.sh  setup_camera_default.sh  undock.sh
autonomous_navigation_challenge_2024/resource/: notes.txt
autonomous_navigation_challenge_2024_msgs/: CMakeLists.txt  package.xml
autonomous_navigation_challenge_2024_msgs/msg/: PerceptedSignpost.msg  PerceptedSignpostList.msg
(+7 files in other folders)
