<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomous_navigation_challenge_2024_msgs</name>
  <version>0.0.0</version>
  <description>This package contains custom messages for the autonomous navigation challenge 2024</description>
  <maintainer email="a.langella31@studenti.unisa.it">Antonio Langella</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
